--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -19,6 +19,9 @@
       <!-- other .ejs that extend this layout -->
       <%- body %>
     </div>
+
+    <!-- if the page is inbox/outbox-->
+    <%- include("partials/pagination") %>
   </div>
 </body>
 
