--- a/src/views/emails/outbox.ejs
+++ b/src/views/emails/outbox.ejs
@@ -1,9 +1,9 @@
 <div class="inbox-wrapper">
 
   <div class="page-name">
-    <h3>Inbox</h3>
+    <h3>Outbox</h3>
     <div class="delete-box">
-      <a href="/email/deleteAll">
+      <a href="/email/delete/">
         <button class="delete-btn">Delete</button>
       </a>
     </div>
