--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -21,7 +21,9 @@
     </div>
 
     <!-- if the page is inbox/outbox-->
+    <% if (currentUrl === '/' || currentUrl === '/inbox' || currentUrl === '/outbox') { %>
     <%- include("partials/pagination") %>
+    <% } %>
   </div>
 </body>
 
