update: session + sequelize

--- a/src/views/emails/detail.ejs
+++ b/src/views/emails/detail.ejs
@@ -5,34 +5,34 @@
   </div>
   <% } %>
   <div class="page-name">
-    <h3><%= email.subject %></h3>
+    <h3><%= session.data.email.subject %></h3>
     <div class="delete-box">
       <div class="reply">
         <a href="/compose/:"><button>Reply</button></a>
       </div>
       <div class="delete">
-        <button class="delete-btn" onclick="deleteEmail('<%= email.id %>')">Delete</button>
+        <button class="delete-btn" onclick="deleteEmail('<%= session.data.email.id %>')">Delete</button>
       </div>
     </div>
   </div>
 
   <div class="email-sender">
     <h5>Sent by: </h5>
-    <p><%= email.sender_fullname %></p>
+    <p><%= session.data.email.sender_fullname %></p>
   </div>
 
   <div class="email-receiver">
     <h5>Sent to: </h5>
-    <p><%= email.receiver_fullname %></p>
+    <p><%= session.data.email.receiver_fullname %></p>
   </div>
 
   <div class="email-body">
     <h5>Body:</h5>
-    <p><%= email.body%></p>
+    <p><%= session.data.email.body%></p>
   </div>
   <div class="email-attachment-path">
     <h5>Attachment:</h5>
-    <a href="<%= email.attachment_path %>" target="_blank"><%= email.attachment_path%></a>
+    <a href="<%= session.data.email.attachment_path %>" target="_blank"><%= session.data.email.attachment_path%></a>
   </div>
 </div>
 
