update: outbox checkboxes

--- a/src/views/emails/outbox.ejs
+++ b/src/views/emails/outbox.ejs
@@ -3,16 +3,14 @@
   <div class="page-name">
     <h3>Outbox</h3>
     <div class="delete-box">
-      <a href="/email/delete/">
-        <button class="delete-btn">Delete</button>
-      </a>
+      <button class="delete-btn" onclick="deleteSelectedEmails()">Delete</button>
     </div>
   </div>
   <div class="email-div">
     <table class="email-list">
       <thead>
         <tr>
-          <th><input type="checkbox"></th>
+          <th><input type="checkbox" id="select-all" onclick="toggleSelectAll(this)"></th>
           <th>Receiver</th>
           <th>Subject</th>
           <th>Sent At</th>
@@ -20,19 +18,19 @@
       </thead>
       <tbody>
         <% session.data.emails.forEach(email=> { %>
-        <tr class="email-item" onclick="window.location.href='/email/<%= email.id %>'">
-          <td class="">
-            <input type="checkbox">
+        <tr class="email-item">
+          <td>
+            <input type="checkbox" class="email-checkbox" value="<%= email.id %>">
           </td>
-          <td class="sender">
+          <td class="sender" onclick="window.location.href='/email/<%= email.id %>'">
             <%= email.receiver_fullname %>
           </td>
-          <td class="body">
+          <td class="subject" onclick="window.location.href='/email/<%= email.id %>'">
             <%= email.subject %>
           </td>
-          <td class="sent_at">
+          <td class="sent_at" onclick="window.location.href='/email/<%= email.id %>'">
             <% const sentDate=new Date(email.sent_at); const now=new Date(); const oneDay=24 * 60 * 60 *
-                            1000; const daysAgo=Math.floor((now - sentDate) / oneDay); if (daysAgo===0) { %>
+                              1000; const daysAgo=Math.floor((now - sentDate) / oneDay); if (daysAgo===0) { %>
             <%= sentDate.toLocaleTimeString([], { hour: '2-digit' , minute: '2-digit' }) %>
             <% } else if (daysAgo===1) { %>
             Yesterday
@@ -50,3 +48,7 @@
 
 
 </div>
+
+
+<script src="/js/toggleSelectAll.js"></script>
+<script src="/js/deleteSelectedEmails.js"></script>
