update: add compose email form

--- a/src/views/emails/detail.ejs
+++ b/src/views/emails/detail.ejs
@@ -8,7 +8,7 @@
     <h3><%= session.data.email.subject %></h3>
     <div class="delete-box">
       <div class="reply">
-        <a href="/compose/:"><button>Reply</button></a>
+        <a href="/compose/<%= session.user.id === session.data.email.sender_id ? session.data.email.receiver_id : session.data.email.sender_id  %> "><button>Reply</button></a>
       </div>
       <div class="delete">
         <button class="delete-btn" onclick="deleteEmail('<%= session.data.email.id %>')">Delete</button>
