--- a/src/views/emails/compose.ejs
+++ b/src/views/emails/compose.ejs
@@ -14,7 +14,18 @@
     <form action="/emails" method="POST" enctype="multipart/form-data">
       <div class="form-group">
         <label for="receiver_id">Receiver ID</label>
-        <input type="number" id="receiver_id" name="receiver_id" required>
+        <% if (receiver) { %>
+        <select id="receiver_id" name="receiver_id" required>
+          <option value="<%= receiver.id %>"><%= receiver.full_name %></option>
+        </select>
+        <% } else { %>
+        <select id="receiver_id" name="receiver_id" required>
+          <option value="">Select a recipient...</option>
+          <% receivers.forEach(function(user) { %>
+          <option value="<%= user.id %>"><%= user.full_name %></option>
+          <% }); %>
+        </select>
+        <% } %>
       </div>
 
       <div class="form-group">
