update: views & folder_structure

--- a/src/views/emails/detail.ejs
+++ b/src/views/emails/detail.ejs
@@ -32,7 +32,7 @@
   </div>
   <div class="email-attachment-path">
     <h5>Attachment:</h5>
-    <a href="<%= session.data.email.attachment_path %>" target="_blank"><%= session.data.email.attachment_path%></a>
+    <a href="<%= session.data.email.attachment_path %>" download="email_attachment"><%= session.data.email.attachment_path%></a>
   </div>
 </div>
 
