--- a/src/views/emails/compose.ejs
+++ b/src/views/emails/compose.ejs
@@ -46,7 +46,7 @@
       </div>
 
       <div class="form-group">
-        <label for="body">Message Body</label>
+        <label for="body">Body</label>
         <textarea id="body" name="body" required></textarea>
       </div>
 
