update: error handling & replying to reply

--- a/src/views/emails/compose.ejs
+++ b/src/views/emails/compose.ejs
@@ -39,7 +39,7 @@
       <div class="form-group">
         <label for="subject">Subject</label>
         <% if (receiver) { %>
-        <input type="text" id="subject" name="subject" value="Re: <%= receiver.SentEmails[0].subject %>" required>
+        <input type="text" id="subject" name="subject" value="Re: <%= receiver.SentEmails.length != 0 ? receiver.SentEmails[0].subject : receiver.ReceivedEmails[0].subject %>" required>
         <% }  else { %>
         <input type="text" id="subject" name="subject" required>
         <% } %>
