--- a/src/views/emails/detail.ejs
+++ b/src/views/emails/detail.ejs
@@ -18,12 +18,12 @@
 
   <div class="email-sender">
     <h5>Sent by: </h5>
-    <p><%= session.data.email.sender_fullname %></p>
+    <p><%= session.data.email.Sender.full_name %></p>
   </div>
 
   <div class="email-receiver">
     <h5>Sent to: </h5>
-    <p><%= session.data.email.receiver_fullname %></p>
+    <p><%= session.data.email.Receiver.full_name %></p>
   </div>
 
   <div class="email-body">
