--- a/src/views/emails/outbox.ejs
+++ b/src/views/emails/outbox.ejs
@@ -27,7 +27,7 @@
             <input type="checkbox" class="email-checkbox" value="<%= email.id %>">
           </td>
           <td class="sender" onclick="window.location.href='/email/<%= email.id %>'">
-            <%= email.receiver_fullname %>
+            <%= email.Receiver.full_name %>
           </td>
           <td class="subject" onclick="window.location.href='/email/<%= email.id %>'">
             <%= email.subject %>
