--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -45,6 +45,17 @@ body {
   border-radius: 3px;
 }
 
+#signout_btn {
+  text-decoration: none;
+  color: red;
+  background-color: white;
+}
+
+#signout_btn:hover {
+  background-color: #f0f0f0;
+  border-radius: 3px;
+}
+
 .error {
   color: red;
   margin-bottom: 10px;
