--- a/src/views/emails/inbox.ejs
+++ b/src/views/emails/inbox.ejs
@@ -22,6 +22,11 @@
         </tr>
       </thead>
       <tbody>
+        <% if (session.data.emails.length === 0)  { %>
+        <tr>
+          <td colspan="4">No Message found!</td>
+        </tr>
+        <% }  %>
         <% session.data.emails.forEach(email => { %>
         <tr class="email-item">
           <td>
