--- a/src/views/emails/compose.ejs
+++ b/src/views/emails/compose.ejs
@@ -41,13 +41,13 @@
         <% if (receiver) { %>
         <input type="text" id="subject" name="subject" value="Re: <%= receiver.SentEmails.length != 0 ? receiver.SentEmails[0].subject : receiver.ReceivedEmails[0].subject %>" required>
         <% }  else { %>
-        <input type="text" id="subject" name="subject" required>
+        <input type="text" id="subject" name="subject">
         <% } %>
       </div>
 
       <div class="form-group">
         <label for="body">Body</label>
-        <textarea id="body" name="body" required></textarea>
+        <textarea id="body" name="body"></textarea>
       </div>
 
       <div class="form-group">
