--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -1,3 +1,27 @@
-<div class="error">
-  <%= error %>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Email System</title>
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
+  <div class="container">
+    <% if (session.user) { %>
+    <%- include('partials/header', {user: session.user}) %>
+    <% } %>
+
+    <!-- Main content body -->
+    <div class="main-content">
+      <div class="error">
+        <%= error %>
+      </div>
+    </div>
+
+  </div>
+</body>
+
+</html>
